--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -39,6 +39,11 @@ li {
 	box-sizing: border-box;
 }
 
+.random-button > a {
+	display: block;
+	color: #4E4E4E;
+}
+
 .choice-content-wrap {
 	margin-top: 25px;
 }
@@ -78,7 +83,7 @@ li {
 }
 
 .select-menu-image {
-	width: 300px;
+	width: 500px;
 	height: auto;
 	margin-top: 10px;
 }
@@ -137,5 +142,9 @@ li {
 
 	.genre:not(:nth-child(3n + 1)) {
 		margin-left: 10px;
+	}
+
+	.select-menu-image {
+		width: calc(100% - 50px);
 	}
 }
